--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
                 </div>
             </div>
             <div>
-                <div class="card-board"></div>
+                <div class="card-board">
+                    <div class="deck">
+                        <img src="./assets/mythicCardBackground.png" alt="deck">
+                        <span class="deck-amount"></span>
+                    </div>
+                    <div class="current-card"></div>
+                </div>
             </div>
         </div>
     </main>
